# lite-auth-proxy

./: .env.example  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.flex  Dockerfile.grpcecho  Dockerfile.lite  LICENSE  Makefile  Makefile.gcp  README.md  RELEASE.md  cloudbuild.yaml  docker-compose.yml  go.mod  go.sum
.claude/: CLAUDE.md  settings.json  settings.local.json
.github/workflows/: docker-publish.yml
cmd/flex/: main.go  main_test.go
cmd/grpc-echo/: main.go
cmd/lite/: main.go
cmd/proxy/: main.go
config/: config-flex.toml  config-lite.toml  config.test.toml  config.toml
configs/: config.toml
docs/: ADMIN.md  API.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  ENVIRONMENT.md  GRPC-TRANSCODING.md  PLUGINS.md  RATE-LIMITING.md
docs/steps/: step-05-startup-rule-persistence.md
e2e/: .gitignore  README.md  behave.ini  pyproject.toml  run.sh
e2e/compose/: docker-compose.e2e.yml  docker-compose.grpc-negative.yml
e2e/features/: admin.feature  apikey_auth.feature  environment.py  grpc_negative.feature  grpc_transcoding.feature  health.feature  jwt_auth.feature  rate_limiting.feature
e2e/features/steps/: proxy_steps.py
e2e/proxylib/: __init__.py  compose.py  config.py  firebase.py
internal/admin/: auth.go  auth_test.go  handler.go  handler_test.go  rule_store.go  rule_store_test.go  types.go
internal/config/: config.go  config_test.go
internal/logging/: logger.go  logger_test.go
scripts/: docker-build.sh
terraform/: .gitignore  Makefile  README.md  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+65 files in other folders)
